# trusted-execution-clusters

./: .gitignore  Cargo.toml  Containerfile  Makefile  README.md  REUSE.toml  go.mod  go.sum
.github/workflows/: lint.yml
api/: trusted-cluster-gen.go
api/v1alpha1/: conditions.go  crds.go
attestation-key-register/: Cargo.toml  Containerfile
attestation-key-register/src/: lib.rs  main.rs
bundle/: Containerfile
bundle/static/manifests/: trusted-cluster-operator.clusterserviceversion.yaml
bundle/static/metadata/: annotations.yaml
compute-pcrs/: Cargo.toml  Containerfile
compute-pcrs/src/: main.rs
config/rbac/: kustomization.yaml  role_binding.yaml  scc.yaml  service_account.yaml
docs/usage/: getting-started-guide.md  os-and-node-lifecycle.md
lib/: Cargo.toml
lib/src/: conditions.rs  kopium.rs  lib.rs  reference_values.rs
operator/: Cargo.toml
operator/src/: attestation_key_register.rs  conditions.rs  main.rs  reference_values.rs  register_server.rs  test_utils.rs  trustee.rs
register-server/: Cargo.toml  Containerfile
register-server/src/: main.rs
scripts/: clean-cluster-kind.sh  generate-bundle-prod.sh  pre-pull-images.sh
test_utils/: Cargo.toml
test_utils/src/: lib.rs  mock_client.rs  virt.rs
test_utils/src/virt/: azure.rs  kubevirt.rs  mod.rs
tests/: Cargo.toml  README.md  attestation.rs  trusted_execution_cluster.rs
