# SPDX-FileCopyrightText: Alice Frosi <afrosi@redhat.com>
# SPDX-FileCopyrightText: Jakob Naucke <jnaucke@redhat.com>
#
# SPDX-License-Identifier: CC0-1.0

[workspace]
members = ["compute-pcrs", "lib", "operator", "register-server", "test_utils", "tests"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
clevis-pin-trustee-lib = { git = "https://github.com/latchset/clevis-pin-trustee" }
compute-pcrs-lib = { git = "https://github.com/trusted-execution-clusters/compute-pcrs" }
env_logger = "0.11.8"
http = "1.4.0"
ignition-config = "0.5.0"
k8s-openapi = { version = "0.26.1", features = ["v1_33", "schemars"] }
kube = { version = "2.0.1", default-features = false, features = ["derive", "runtime", "openssl-tls"] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml = "0.9"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.19", features = ["v4", "serde"] }
