# SPDX-FileCopyrightText: Alice Frosi <afrosi@redhat.com>
# SPDX-FileCopyrightText: Jakob Naucke <jnaucke@redhat.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "compute-pcrs"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
description = "A trusted-cluster-operator optimized compute-pcrs interface"

[dependencies]
anyhow.workspace = true
clap.workspace = true
trusted-cluster-operator-lib = { path = "../lib" }
compute-pcrs-lib.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
serde_json.workspace = true
tokio.workspace = true
