# SPDX-FileCopyrightText: Alice Frosi <afrosi@redhat.com>
# SPDX-FileCopyrightText: Jakob Naucke <jnaucke@redhat.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "trusted-cluster-operator-lib"
version = "0.2.1"
description = "Definitions shared across operator, compute-pcrs and register-server"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
compute-pcrs-lib.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
# Only a generate dependency, not a Rust dependency. Included here for auto-updates.
kopium = "0.22.5"
