# SPDX-FileCopyrightText: Alice Frosi <afrosi@redhat.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "operator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
clevis-pin-trustee-lib.workspace = true
trusted-cluster-operator-lib = { path = "../lib" }
compute-pcrs-lib.workspace = true
env_logger.workspace = true
futures-util = "0.3.31"
hex = "0.4.3"
json-patch = "4.1.0"
jsonptr = "0.7.1"
k8s-openapi.workspace = true
kube.workspace = true
log.workspace = true
oci-client = "0.15.0"
oci-spec = "0.8.4"
openssl = "0.10.75"
serde.workspace = true
serde_json.workspace = true
thiserror = "2.0.17"
tokio.workspace = true

[dev-dependencies]
http.workspace = true
trusted-cluster-operator-test-utils = { path = "../test_utils" }
