# SPDX-FileCopyrightText: Alice Frosi <afrosi@redhat.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "register-server"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
clevis-pin-trustee-lib.workspace = true
trusted-cluster-operator-lib = { path = "../lib" }
env_logger.workspace = true
ignition-config.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
warp = "0.3"

[dev-dependencies]
http.workspace = true
trusted-cluster-operator-test-utils = { path = "../test_utils" }
