# SPDX-FileCopyrightText: Jakob Naucke <jnaucke@redhat.com>
# SPDX-FileCopyrightText: Alice Frosi <afrosi@redhat.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "trusted-cluster-operator-tests"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true

[features]
virtualization = []

[dependencies]
anyhow.workspace = true
cfg-if = "1.0.4"
compute-pcrs-lib.workspace = true
k8s-openapi.workspace = true
kube = { workspace = true }
regex = "1"
serde_json.workspace = true
tokio = { workspace = true }
trusted-cluster-operator-lib = { path = "../lib" }
trusted-cluster-operator-test-utils = { path = "../test_utils" }
uuid.workspace = true

[[test]]
name = "trusted_execution_cluster"
path = "trusted_execution_cluster.rs"

[[test]]
name = "attestation"
path = "attestation.rs"

[[test]]
name = "equal_conditions"
path = "equal_conditions.rs"
